create and get ingredients
